# mwis-ml

./: .gitignore  .gitmodules  .train_graphs_list.txt.swp  .train_labels_list.txt.swp  CMakeLists.txt  README.md  example.cpp  features.h  features_old.cpp  gen_test_kernels.sh  make_labels.sh  ml-reduce.cpp  ml-train.cpp  parse_parameters.h  reduced.graph  test_graphs_list.txt  test_labels_list.txt  train_graphs_list.txt  train_labels_list.txt  weighted_branch_reduce  weighted_local_search  weighted_ls.cpp  weighted_ls.h
app/: .ml-reduce-simple.cpp.swp  ml-reduce-simple.cpp  ml-reduce.cpp  ml-train.cpp  test-weighted_ls.cpp
lib/: io_wrapper.cpp  io_wrapper.h  ml-features.h  ml_features.cpp  ml_features.h  ml_reducer.cpp  ml_reducer.h  safe_c_api.h
lib/data_structures/: feature_matrix.cpp  feature_matrix.h  ml_features.cpp  ml_features.h
lib/ml/: .ml_features.cpp.swp  .ml_reducer.cpp.swp  .nfs00000000266b850e000000f8  .nfs00000000266b8534000000f7  ml_features.cpp  ml_features.h  ml_features_old.cpp  ml_reducer.cpp  ml_reducer.h
lib/tools/: .io_wrapper.cpp.swp  MLConfig.cpp  MLConfig.h  io_wrapper.cpp  io_wrapper.h  stat.h
lib/wmis_interface/: branch_reduce.cpp  branch_reduce.h  weighted_ls.cpp  weighted_ls.h
models/: 21-11-07_12-43-49.model  21-11-19_13-23-06.model  21-12-05_18-19-40.model  21-12-05_21-42-34.model  21-12-08_12-43-27.model  21-12-08_14-49-09.model  21-12-08_16-26-25.model  latest.model  standard.model
tests_kernel_model/: bcsstk31-sorted.graph.kernel.reduced
